--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "accredian-frontend-task",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -14,9 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
-    "redux": "^5.0.0",
     "styled-components": "^6.1.1",
-    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
